# costmap_generator

./: CMakeLists.txt  package.xml
include/costmap_generator/: costmap_generator_node.hpp  obstacle_masking.hpp
src/: costmap_generator_node.cpp  obstacle_masking.cpp
